--- a/index.html
+++ b/index.html
@@ -7,12 +7,21 @@
     <link rel="stylesheet" href="./CSS/pages/index.css">
     <script src="./js/cardapio.js" defer></script>
     <script src="./js/comando_voz.js" defer></script>
+    <script src="./js/acessibilidade.js"></script>
 
 
 </head>
 <body>
 
-    <button id="voiceButton">Clique para falar</button>
+        <button id="voiceButton">Clique para falar</button>
+
+    
+        <div id="toggle-button-container">
+            <button id="toggle-button" onclick="toggleLeitura()">Ativar Leitura</button>
+        </div>
+    
+   
+   
  
     <div class="container">
         <h1>Busque seu Produto</h1>
