--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-
+    <main class="home_main">
     <div id="toggle-button-container">
         <button id="voiceButton">Clique para falar</button> 
         <button id="toggle-button" onclick="toggleLeitura()">Ativar Leitura</button>
@@ -20,8 +20,7 @@
     </div>
         
     <div class="container">
-        <h1>Busque seu Produto</h1>
-        <p>Pode ser clicando, buscando ou falando. <br> Experimente essas funções!
+        <p>Você pode buscar seu produto, digitando no campo abaixo ou ativando o modo falar. <br>Temos a função de audio leitura. Experimente essas funções!
         </p>
         <input type="text" id="search" placeholder="Digite o nome da pizza ou bebida...">
         <div id="product" class="product">
@@ -40,6 +39,6 @@
         <img id="popupImage" src="" alt="">
         <p id="popupDescription"></p>
     </div>
-
+    </main>
 </body>
 </html>
